# setvaluedprediction

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.py
.github/workflows/: build-manylinux.yml  build-wheels.yml  build.yml
src/main/cpp/: setup.py  setup_svp.py  svbop.cpp  svbop.h  svp_cpp.cpp  svp_cpp.h
src/main/py/: svp.py  utils.py
src/test/: data.py  experiments.py  ilp.py  models.py  svbop.py  svbopcpp.py  svbopcpp_analysis.py  svp_cal101.py  svp_cal101.sh  utils.py
src/test/cpp/: CMakeLists.txt  dict.cpp  hsoftmax.cpp  linear.cpp  softmax.cpp
src/test/python/: dict.py  linear.py  setup.py
src/test/svphc/: data.py  experiments.py  experiments.sh  models.py  utils.py
svp/: _utils.py  multiclass.py  utils.py
svp/csrc/: svp_cpp.cpp  svp_cpp.h
svp/tests/: test_svp.py  test_svpclassifier.py
svp/tests/csvphc/: data.py  experiments.py  experiments.sh  models.py  tablecalculator.py  tablecalculator.sh  utils.py
svp/tests/csvphc/experiments/: ampsr.yaml  aps.yaml  apsr.yaml  lac.yaml  nmpsr.yaml  nps.yaml  npsr.yaml  rampsr.yaml  raps.yaml  rapsr.yaml
svp/tests/svphc/: data.py  experiments.py  experiments.sh  models.py  utils.py
